--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,8 @@ wp_db_charset: 'utf8'
 wp_db_collate: ''
 wp_table_prefix: 'wp_'
 wp_debug: false
-
+apache_user: www-data
+apache_group: www-data
 wp_fs_method: 'direct'
 wp_lang: ''
 
