--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,19 +17,12 @@
 - name: Wordpresss | Move extracted directory to {{wp_install_dir}}
   command: /bin/mv /tmp/wordpress {{wp_install_dir}} creates={{wp_install_dir}}
 
-- name: Wordpresss | Remove wordpress-{{wp_version}}.tar.gz
-  file: path=/tmp/wordpress-{{wp_version}}.tar.gz state=absent
-
 - name: Wordpresss | Fetch random salts for wp-config.php
-  local_action: command curl https://api.wordpress.org/secret-key/1.1/salt/
-  sudo: no
-  register: 'wp_salt'
+  action: uri url=https://api.wordpress.org/secret-key/1.1/salt/ return_content=yes
+  register: wp_salt
 
 - name: Wordpresss | Copy wp-config.php file
   template: src=wp-config.php.j2 dest={{wp_install_dir}}/wp-config.php
 
 - name: Wordpresss | Change ownership of installation directory
   file: path={{wp_install_dir}} owner='{{apache_user}}' group='{{apache_group}}' mode=775 state=directory recurse=yes
-
-- name: Wordpresss | Change ownership of wp-content directory
-  file: path={{wp_install_dir}}/wp-content/ owner='{{apache_user}}' group='{{apache_group}}' mode=755 state=directory recurse=yes
